## PLANNED FOR 1.3 / 1.4

* Primordial BEACH?
* Primordial Ocean land vegetation
* Portal mechanics?
* GLARE improvements
* Copperbug improvements
* New structure?


> Fix Vines not being pick blockable
> Fix Huge Underhang trees generating without leaves on occasion?


## **Updates in 1.3.1**

### Our first post-1.3 patch is here with some tweaks and bug fixes!
### As a note, beginning with Version 1.3.2, the Bygone will require Lithostitched.

# New features in 1.3.1:
# Verdigris is now a trim material for Armors. (NOTE: Sprites are still bugged!)
* Nectaurs now have a idle animation.

# Changes to existing features:
* Test

# Bug fixes:
* Fixed Sand and Red Sand not being smeltable to Glass.
* Fixed Whiskbills barely spawning.
* Under Grass no longer "floats" under the block its placed.



## **Updates in 1.3**

### Greetings all! It's been a while since the last -major- update, so do we have some changes in store!
### We have changed how the Bygone generates as whole entirely, reworked the Amber Desert biome, revamped the Ancient Hook, added a new mob and so much more!
### PLEASE keep in mind you WILL have to delete your /bygone/ dimension folder before updating! Some of the changes will have made things unstable in older worlds!
### Please join us in the official [Discord](https://discord.gg/DMW28XH235)!

# New features in 1.3:
* Completely overhauled the Bygones world generation! (See below for more details!)
* Overhauled the look of the Amber Desert biome.
* Overhauled the Ancient Hook.
* Added the Whiskbill and Whiskbill Spawn Egg.
* Added the Nectaur and Nectaur Spawn Egg!
* Added the Pesky and Pesky Spawn Egg.
* Added the Amber Sand, Amber Sandstone, Cut Amber Sandstone, Smooth Amber Sandstone and Chiseled Amber Sandstone blocksets.
* Added the Amber Clump.
* Added the Primordial Beach biome.
* Added the Verdigris Scrap Block and Verdigris Block.
* Added the [REDACTED] block, found only in Abandoned Farms.
* Added Glow Gourd Seeds.