@@ -1,0 +1,16 @@
+{
+  "type": "lithostitched:wrap_noise_router",
+  "priority": 2000,
+  "dimension": "bygone:bygone",
+  "target": "fluid_level_floodedness",
+  "wrapper_function": {
+    "type": "minecraft:range_choice",
+    "input": "bygone:parameters",
+    "min_inclusive": 0.9,
+    "max_exclusive": 1.1,
+    "when_in_range": 1,
+    "when_out_of_range": {
+      "type": "lithostitched:wrapped_marker"
+    }
+  }
+}
