@@ -1,0 +1,25 @@
+{
+  "type": "lithostitched:wrap_noise_router",
+  "priority": 2000,
+  "dimension": "bygone:bygone",
+  "target": "barrier",
+  "wrapper_function": {
+    "type": "minecraft:range_choice",
+    "input": "bygone:parameters",
+    "min_inclusive": 0.9,
+    "max_exclusive": 1.1,
+    "when_in_range": {
+      "type": "minecraft:range_choice",
+      "input": "minecraft:y",
+      "min_inclusive": 100,
+      "max_exclusive": 310,
+      "when_in_range": {
+        "type": "lithostitched:wrapped_marker"
+      },
+      "when_out_of_range": -1
+    },
+    "when_out_of_range": {
+      "type": "lithostitched:wrapped_marker"
+    }
+  }
+}
