@@ -1,0 +1,17 @@
+{
+  "type": "lithostitched:wrap_noise_router",
+  "priority": 2000,
+  "dimension": "bygone:bygone",
+  "target": "final_density",
+  "wrapper_function": {
+    "type": "minecraft:add",
+    "argument1": {
+      "type": "lithostitched:wrapped_marker"
+    },
+    "argument2": {
+      "type": "minecraft:min",
+      "argument1": 0.02,
+      "argument2": "bygone:total"
+    }
+  }
+}
