@@ -1,0 +1,31 @@
+{
+  "type": "lithostitched:wrap_noise_router",
+  "priority": 2000,
+  "dimension": "bygone:bygone",
+  "target": "vegetation",
+  "wrapper_function": {
+    "type": "minecraft:range_choice",
+    "input": "bygone:parameters",
+    "min_inclusive": 0.9,
+    "max_exclusive": 1.1,
+    "when_in_range": {
+      "type": "minecraft:range_choice",
+      "input": "minecraft:overworld/depth",
+      "min_inclusive": 0.1,
+      "max_exclusive": 310,
+      "when_in_range": {
+        "type": "minecraft:add",
+        "argument1": 0.25,
+        "argument2": {
+          "type": "lithostitched:wrapped_marker"
+        }
+      },
+      "when_out_of_range": {
+        "type": "lithostitched:wrapped_marker"
+      }
+    },
+    "when_out_of_range": {
+      "type": "lithostitched:wrapped_marker"
+    }
+  }
+}
