@@ -1,0 +1,17 @@
+{
+  "type": "minecraft:cache_once",
+  "argument": {
+    "type": "minecraft:add",
+    "argument1": "bygone:noise/height_additive",
+    "argument2": {
+      "type": "minecraft:mul",
+      "argument1": 0.03,
+      "argument2": {
+        "type": "minecraft:noise",
+        "noise": "bygone:height",
+        "xz_scale": 0.5,
+        "y_scale": 1.6
+      }
+    }
+  }
+}
