@@ -1,0 +1,29 @@
+{
+  "type": "minecraft:add",
+  "argument1": -11,
+  "argument2": {
+    "type": "minecraft:mul",
+    "argument1": {
+      "type": "minecraft:y_clamped_gradient",
+      "from_y": 100,
+      "to_y": 310,
+      "from_value": 0,
+      "to_value": -10
+    },
+    "argument2": {
+      "type": "minecraft:clamp",
+      "input": {
+        "type": "minecraft:add",
+        "argument1": 0.3,
+        "argument2": {
+          "type": "minecraft:noise",
+          "noise": "bygone:roof_sharpness",
+          "xz_scale": 0.6,
+          "y_scale": 0
+        }
+      },
+      "min": 0,
+      "max": 1
+    }
+  }
+}
