@@ -1,0 +1,22 @@
+{
+  "type": "minecraft:flat_cache",
+  "argument": {
+    "type": "minecraft:clamp",
+    "input": {
+      "type": "minecraft:add",
+      "argument1": -65,
+      "argument2": {
+        "type": "minecraft:mul",
+        "argument1": 4.5,
+        "argument2": {
+          "type": "minecraft:noise",
+          "noise": "bygone:y_offset",
+          "xz_scale": 0.6,
+          "y_scale": 0
+        }
+      }
+    },
+    "min": -68.5,
+    "max": -60
+  }
+}
