@@ -1,0 +1,32 @@
+{
+  "type": "minecraft:cache_once",
+  "argument": {
+    "type": "minecraft:range_choice",
+    "input": "minecraft:y",
+    "min_inclusive": 100,
+    "max_exclusive": 310,
+    "when_in_range": {
+      "type": "minecraft:range_choice",
+      "input": "bygone:biome_parameters/ridges",
+      "min_inclusive": -0.275,
+      "max_exclusive": 0.275,
+      "when_in_range": {
+        "type": "minecraft:range_choice",
+        "input": "bygone:biome_parameters/continents",
+        "min_inclusive": 100,
+        "max_exclusive": 310,
+        "when_in_range": {
+          "type": "minecraft:range_choice",
+          "input": "bygone:biome_parameters/erosion",
+          "min_inclusive": -64,
+          "max_exclusive": -0.35,
+          "when_in_range": 1,
+          "when_out_of_range": 0
+        },
+        "when_out_of_range": 0
+      },
+      "when_out_of_range": 0
+    },
+    "when_out_of_range": 0
+  }
+}
