@@ -1,0 +1,20 @@
+{
+  "type": "minecraft:flat_cache",
+  "argument": {
+    "type": "minecraft:cache_2d",
+    "argument": {
+      "type": "minecraft:clamp",
+      "input": {
+        "type": "minecraft:add",
+        "argument1": -3,
+        "argument2": {
+          "type": "minecraft:mul",
+          "argument1": -10,
+          "argument2": "minecraft:overworld/erosion"
+        }
+      },
+      "min": 0,
+      "max": 1
+    }
+  }
+}
