@@ -1,0 +1,17 @@
+{
+  "type": "minecraft:clamp",
+  "input": {
+    "type": "minecraft:add",
+    "argument1": 1,
+    "argument2": {
+      "type": "minecraft:mul",
+      "argument1": "bygone:noise/roof_sharpness",
+      "argument2": {
+        "type": "minecraft:abs",
+        "argument": "minecraft:overworld/ridges"
+      }
+    }
+  },
+  "min": 0,
+  "max": 1
+}
