@@ -1,0 +1,35 @@
+{
+  "type": "minecraft:interpolated",
+  "argument": {
+    "type": "minecraft:max",
+    "argument1": {
+      "type": "minecraft:range_choice",
+      "input": "bygone:pillars",
+      "max_exclusive": 0.03,
+      "min_inclusive": -64,
+      "when_in_range": -64,
+      "when_out_of_range": "bygone:pillars"
+    },
+    "argument2": {
+      "type": "minecraft:add",
+      "argument1": "bygone:noise/density_additive",
+      "argument2": {
+        "type": "minecraft:mul",
+        "argument1": -1,
+        "argument2": {
+          "type": "minecraft:mul",
+          "argument1": {
+            "type": "minecraft:mul",
+            "argument1": "bygone:spline/continents",
+            "argument2": "bygone:spline/erosion"
+          },
+          "argument2": {
+            "type": "minecraft:mul",
+            "argument1": "bygone:spline/elevation",
+            "argument2": "bygone:spline/ridge"
+          }
+        }
+      }
+    }
+  }
+}
