@@ -1,0 +1,9 @@
+{
+  "firstOctave": -5,
+  "amplitudes": [
+    1,
+    1.5,
+    1,
+    1
+  ]
+}
