@@ -1,0 +1,10 @@
+{
+  "firstOctave": -8,
+  "amplitudes": [
+    1,
+    2,
+    1.5,
+    1,
+    1
+  ]
+}
