@@ -1,0 +1,9 @@
+{
+  "firstOctave": -8,
+  "amplitudes": [
+    1,
+    1,
+    1,
+    1
+  ]
+}
