@@ -15,11 +15,12 @@
 ## **Updates in 1.3.1**
 
 ### Our first post-1.3 patch is here with some tweaks and bug fixes!
-### As a note, beginning with Version 1.3.2, the Bygone will require Lithostitched.
+### As a note, beginning with this version, the Bygone will require Lithostitched!
 
 # New features in 1.3.1:
 # Verdigris is now a trim material for Armors. (NOTE: Sprites are still bugged!)
 * Nectaurs now have a idle animation.
+* Lithostitiched is now a dependency for the Bygone.
 
 # Changes to existing features:
 * Test
